--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,7 @@ jobs:
       - name: Docker Buildx Bake
         uses: docker/bake-action@v4.0.0
         with:
+          provenance: false
           targets: pixelfed
           set: "*.platform=${{ matrix.platform }}"
           push: true
