--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,32 +1,32 @@
-name: build
-
-on:
-  push:
-    branches:
-      - 'main'
-
-jobs:
-  pixelfed:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: ["linux/amd64", "linux/arm64"]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Log in to Github Packages
-        uses: docker/login-action@3d58c274f17dffee475a5520cbe67f0a882c4dbb
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
-      - name: Docker Buildx Bake
-        uses: docker/bake-action@v4.1.0
-        with:
-          provenance: false
-          targets: pixelfed
-          set: "*.platform=${{ matrix.platform }}"
-          push: true
+#name: build
+#
+#on:
+#  push:
+#    branches:
+#      - 'main'
+#
+#jobs:
+#  pixelfed:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        platform: ["linux/amd64", "linux/arm64"]
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#      - name: Log in to Github Packages
+#        uses: docker/login-action@3d58c274f17dffee475a5520cbe67f0a882c4dbb
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3.0.0
+#      - name: Docker Buildx Bake
+#        uses: docker/bake-action@v4.1.0
+#        with:
+#          provenance: false
+#          targets: pixelfed
+#          set: "*.platform=${{ matrix.platform }}"
+#          push: true
