--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>damoun/renovate-config"
+  ],
+  "ignorePaths": [
+    "pixelfed"
   ]
 }
